--- a/DBUS.ioc
+++ b/DBUS.ioc
@@ -39,30 +39,33 @@ Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM1
 Mcu.IP7=TIM8
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP8=USART1
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F407I(E-G)Hx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PB5
 Mcu.Pin1=PA14
-Mcu.Pin10=PH1-OSC_OUT
-Mcu.Pin11=PC6
-Mcu.Pin12=PE13
-Mcu.Pin13=PE9
-Mcu.Pin14=PE11
-Mcu.Pin15=PE14
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin10=PA9
+Mcu.Pin11=PH0-OSC_IN
+Mcu.Pin12=PH1-OSC_OUT
+Mcu.Pin13=PC6
+Mcu.Pin14=PE13
+Mcu.Pin15=PE9
+Mcu.Pin16=PE11
+Mcu.Pin17=PE14
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PA13
-Mcu.Pin3=PB6
-Mcu.Pin4=PD0
-Mcu.Pin5=PC11
-Mcu.Pin6=PC10
-Mcu.Pin7=PI7
-Mcu.Pin8=PD1
-Mcu.Pin9=PH0-OSC_IN
-Mcu.PinsNb=19
+Mcu.Pin20=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin3=PB7
+Mcu.Pin4=PB6
+Mcu.Pin5=PD0
+Mcu.Pin6=PC11
+Mcu.Pin7=PC10
+Mcu.Pin8=PI7
+Mcu.Pin9=PD1
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGHx
@@ -83,15 +86,20 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB5.Mode=CAN_Activate
 PB5.Signal=CAN2_RX
 PB6.Mode=CAN_Activate
 PB6.Signal=CAN2_TX
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PC10.Mode=Asynchronous
 PC10.Signal=USART3_TX
 PC11.Mode=Asynchronous
@@ -226,6 +234,9 @@ TIM8.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM8.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,AutoReloadPreload
 TIM8.Period=65535
 TIM8.Prescaler=167
+USART1.IPParameters=VirtualMode,Mode
+USART1.Mode=MODE_TX_RX
+USART1.VirtualMode=VM_ASYNC
 USART3.BaudRate=100000
 USART3.IPParameters=VirtualMode,BaudRate,Parity,WordLength
 USART3.Parity=PARITY_EVEN
