--- a/DBUS.ioc
+++ b/DBUS.ioc
@@ -15,7 +15,18 @@ CAN2.CalculateTimeQuantum=71.42857142857143
 CAN2.IPParameters=CalculateTimeQuantum,BS1,BS2,Prescaler,CalculateBaudRate
 CAN2.Prescaler=3
 Dma.Request0=USART3_RX
-Dma.RequestsNb=1
+Dma.Request1=USART1_RX
+Dma.RequestsNb=2
+Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_RX.1.Instance=DMA2_Stream2
+Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.1.Mode=DMA_NORMAL
+Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART3_RX.0.Instance=DMA1_Stream1
@@ -37,11 +48,9 @@ Mcu.IP2=DMA
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM8
-Mcu.IP8=USART1
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP6=USART1
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F407I(E-G)Hx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PB5
@@ -55,9 +64,7 @@ Mcu.Pin15=PE9
 Mcu.Pin16=PE11
 Mcu.Pin17=PE14
 Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PA13
-Mcu.Pin20=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin3=PB7
 Mcu.Pin4=PB6
 Mcu.Pin5=PD0
@@ -65,7 +72,7 @@ Mcu.Pin6=PC11
 Mcu.Pin7=PC10
 Mcu.Pin8=PI7
 Mcu.Pin9=PD1
-Mcu.PinsNb=21
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGHx
@@ -75,6 +82,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN2_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -84,8 +92,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
-NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.Mode=Serial_Wire
@@ -174,7 +180,7 @@ ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_CAN2_Init-CAN2-false-HAL-true,8-MX_TIM8_Init-TIM8-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_CAN2_Init-CAN2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -211,29 +217,18 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
-SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
+SH.S_TIM1_CH1.0=TIM1_CH1
 SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM1_CH2.0=TIM1_CH2,Input_Capture2_from_TI2
+SH.S_TIM1_CH2.0=TIM1_CH2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3
 SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM1_CH4.0=TIM1_CH4
 SH.S_TIM1_CH4.ConfNb=1
-SH.S_TIM8_CH1.0=TIM8_CH1,Input_Capture1_from_TI1
+SH.S_TIM8_CH1.0=TIM8_CH1
 SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH3.0=TIM8_CH3
 SH.S_TIM8_CH3.ConfNb=1
-TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM1.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
-TIM1.IPParameters=Period,Prescaler,Channel-Input_Capture1_from_TI1,AutoReloadPreload,Channel-Input_Capture2_from_TI2
-TIM1.Period=65535
-TIM1.Prescaler=167
-TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM8.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM8.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,AutoReloadPreload
-TIM8.Period=65535
-TIM8.Prescaler=167
 USART1.IPParameters=VirtualMode,Mode
 USART1.Mode=MODE_TX_RX
 USART1.VirtualMode=VM_ASYNC
@@ -244,8 +239,4 @@ USART3.VirtualMode=VM_ASYNC
 USART3.WordLength=WORDLENGTH_9B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ClockSourceINT.Mode=Internal
-VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-VP_TIM8_VS_ClockSourceINT.Mode=Internal
-VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
